load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "script",
    args  = ["-m", "obazl_main.scm"],
    linkstatic = True,
    srcs  = [
        "script.c", "script.h",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
        "//conditions:default":   []
    }) + [
        "WITH_C_LOADER"
    ],
    copts = select({
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-Wall",
        "-Werror",
        "-Wpedantic",
        "-Wno-unused-function",

        "-I$(GENDIR)/script",
        "-I$(GENDIR)/external/obazl/script",

        "-I$(GENDIR)/external/mibl/src/hdrs", # libmibl.h
        "-Iexternal/mibl/vendored/gopt",
        "-Iexternal/mibl/vendored/libinih",
        "-Iexternal/mibl/vendored/logc",
        "-Iexternal/mibl/vendored/uthash",
        "-Iexternal/libs7/src", # loaded by @mibl
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": ["-ldl", "-lm"],
        "//conditions:default": {}
    }),
    data = [
        "@mibl//scm:srcs",
        "@mibl//scm/dune:srcs",
        "@mibl//scm/meta:srcs",
        "@mibl//scm/opam:srcs",
        "//scm:srcs",
        "//scm/starlark:srcs"
    ],
    deps = [
        "@mibl//src:mibl",
        "@mibl//vendored/gopt",
        "@mibl//vendored/libinih:inih",
        "@mibl//vendored/logc",
        "@mibl//vendored/uthash",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "script.c",
    ],
    outs = [
        "script.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location script.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location script.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
