load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["rules.bzl"])

bzl_library( # for stardoc
    name = "stardoc",
    visibility = ["//visibility:public"],
    srcs = [
        "//tools:BUILD.bzl",
        #NB: the _providers:stardoc dep makes this accessible:
        "@rules_ocaml//build:providers.bzl",
    ],
    deps = [
        # _providers:stardoc is a bzl_library target:
        "@rules_ocaml//ocaml/_providers:stardoc",
    ]
)
