package(default_visibility = ["//visibility:public"])

load("//tools:BUILD.bzl", "inspect")

## //ocamlobj is a label-typed build setting; its default value is the
## null module.  It must be overriden by passing a command-line arg:

## --@obazl//tgt=//pkg:tgt

inspect(
    name = "inspect",
    obj = "//tgt",
)
