package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")

load("//null:BUILD.bzl", "ocaml_null_module")

## null module, must be overridden by passing cmd line arg, e.g.:
## --@obazl//tgt=//<pkg>:<tgt>

ocaml_null_module(name="null")

label_flag( name = "tgt", build_setting_default = ":null")
